--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-horizontal-scrolling-menu": "^0.7.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-scroll-horizontal": "^1.6.4",
     "react-spring": "^8.0.27"
   },
   "scripts": {
